--- a/_CoqProject.in
+++ b/_CoqProject.in
@@ -1,4 +1,4 @@
--Q . Undecidability
+-Q . SyntheticComputability
 
 -arg -w -arg -notation-overridden
 COQDOCFLAGS = "--charset utf-8 -s --with-header ./website/resources/header.html --with-footer ./website/resources/footer.html --index indexpage"
