--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,8 @@ jobs:
           fetch-depth: 1
 
       - run: opam repo add coq-released https://coq.inria.fr/opam/released
-      - run: opam install coq.8.13.2 coq-equations.1.2.3+8.13 coq-stdpp.1.5.0 coq-metacoq-template.1.0~beta2+8.13 coq-smpl
+      - run: opam install coq-metacoq-template.1.0+8.15
 
-      - run: opam exec -- make -j 2 
+      - run: opam exec -- make -j 2
+      - run: opam pin add coq-library-undecidability.dev+8.15 "https://github.com/uds-psl/coq-library-undecidability.git#coq-8.15"
+      - run: opam exec -- make models -j 2
