--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
           fetch-depth: 1
 
       - run: opam repo add coq-released https://coq.inria.fr/opam/released
-      - run: opam install coq-equations.1.3+8.15 coq-smpl
+      - run: opam install coq-equations.1.3+8.15 coq-stdpp
       - run: opam exec -- make -j 2
 
       - run: opam pin add coq-library-undecidability.dev+8.15 "https://github.com/uds-psl/coq-library-undecidability.git#coq-8.15"
