--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,9 +17,9 @@ jobs:
         uses: actions/cache@v2
         with:
           path: "~/.opam"
-          key: opam-main-${{github.base_ref}}-${{github.ref}} 
+          key: opam-reddegrees-${{github.base_ref}}-${{github.ref}} 
           restore-keys: |
-            opam-main--refs/heads/${{github.base_ref}}
+            opam-reddegrees--refs/heads/${{github.base_ref}}
 
       - name: Install OCaml
         uses: avsm/setup-ocaml@v1
@@ -32,8 +32,5 @@ jobs:
           fetch-depth: 1
 
       - run: opam repo add coq-released https://coq.inria.fr/opam/released
-      - run: opam install coq-equations.1.3+8.15 coq-stdpp
+      - run: opam install coq.8.15.2 coq-stdpp
       - run: opam exec -- make -j 2
-
-      - run: opam pin add coq-library-undecidability.dev+8.15 "https://github.com/uds-psl/coq-library-undecidability.git#coq-8.15"
-      - run: opam exec -- make models -j 2
