--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,9 +17,9 @@ jobs:
         uses: actions/cache@v2
         with:
           path: "~/.opam"
-          key: opam-main-${{github.base_ref}}-${{github.ref}} 
+          key: opam-PT-${{github.base_ref}}-${{github.ref}} 
           restore-keys: |
-            opam-main--refs/heads/${{github.base_ref}}
+            opam-PT--refs/heads/${{github.base_ref}}
 
       - name: Install OCaml
         uses: avsm/setup-ocaml@v1
@@ -32,8 +32,8 @@ jobs:
           fetch-depth: 1
 
       - run: opam repo add coq-released https://coq.inria.fr/opam/released
-      - run: opam install coq-equations.1.3+8.15 coq-stdpp.1.7.0
+      - run: opam install coq-equations.1.3+8.17 coq-stdpp.1.8.0 coq-library-undecidability.1.1+8.17
       - run: opam exec -- make -j 2
 
-      - run: opam pin add coq-library-undecidability.dev+8.15 "https://github.com/uds-psl/coq-library-undecidability.git#coq-8.15"
+      - run: opam install coq-library-undecidability.1.1+8.17
       - run: opam exec -- make models -j 2
