--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,9 @@ jobs:
             opam-PT--refs/heads/${{github.base_ref}}
 
       - name: Install OCaml
-        uses: avsm/setup-ocaml@v1
+        uses: avsm/setup-ocaml@v2
         with:
-          ocaml-version: 4.09.1+flambda
+          ocaml-compiler: ocaml-variants.4.14.0
 
       - name: Checkout code
         uses: actions/checkout@v2
