--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
 
       - run: opam repo add coq-released https://coq.inria.fr/opam/released
       - run: opam install coq-equations.1.3+8.17 coq-stdpp.1.8.0 
-      - run: opam exec -- make -j 2
+      - run: opam exec -- cd theories && make -j 2
 
 # name: Test compilation
 
