--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,8 @@ jobs:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
 
       - run: opam repo add coq-released https://coq.inria.fr/opam/released
-      - run: opam install coq-equations.1.3+8.17 coq-stdpp.1.8.0 
-      - run: cd theories && opam exec -- make -j 2
+      - run: opam install coq-equations.1.3+8.17 coq-stdpp.1.8.0 coq-library-undecidability.1.1+8.17
+      - run: cd theories && opam exec -- make models -j 2
 
 # name: Test compilation
 
