--- a/theories/_CoqProject.in
+++ b/theories/_CoqProject.in
@@ -1,4 +1,4 @@
 -Q . SyntheticComputability
 
 -arg -w -arg -notation-overridden 
-COQDOCFLAGS = "--charset utf-8 -s --with-header ../website/resources/header.html --with-footer ../website/resources/footer.html --index indexpage"
+COQDOCFLAGS = "--charset utf-8 --parse-comments -s --with-header ../website/resources/header.html --with-footer ../website/resources/footer.html --index indexpage"
