--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,8 @@ jobs:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
 
       - run: opam repo add coq-released https://coq.inria.fr/opam/released
-      - run: opam install coq-equations.1.3+8.17 coq-stdpp.1.8.0 coq-metacoq-template.1.2+8.17 coq-library-undecidability.1.1+8.17
-      - run: cd theories && opam exec -- make models -j 2
+      - run: opam install rocq-equations.1.3.1+9.0 coq-stdpp
+      - run: cd theories && opam exec -- make 
 
 # name: Test compilation
 
